# HandPy-Skill

./: .gitignore  README.md  handpy_tool.py  pyproject.toml
.claude/skills/handpy/: SKILL.md
.claude/skills/handpy/references/: common.md  patterns.md  tool.md  v2.md  v3.md
.claude/skills/handpy/references/modules/: bluebit.md  hcsr04.md  images.md  ir_remote.md  lv_gui.md  mpython_ble.md  parrot.md  servo.md  siot.md  smartcamera.md  xunfei.md
board/: handpy_server.py  screen_server_v2.py  screen_server_v3.py
skills/: handpy-common.md  handpy-tool.md  handpy-v2.md  handpy-v3.md
skills/modules/: bluebit.md  lv_gui.md
