[project]
name = "handpy-tool"
version = "0.1.0"
description = "HandPy (mPython) board control tool"
requires-python = ">=3.9"
dependencies = [
    "mpremote>=1.0",
    "esptool>=4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
handpy-tool = "handpy_tool:main"
